plugins/kotlin/idea/tests/testData/multiModuleLineMarker/fromClassToJavaAliasInTest/jvm/empty.kt
actual typealias <!LINE_MARKER("descr='Has expects in common module'")!>Expected<!> = ExpectedImpl
